# barcoded-tnbc-doxorubicin

./: .gitignore  Makefile  README.md  config.yml  pyproject.toml  tasks.py
data/: raw-files.txt
drug-dosing/: README.md
drug-dosing/data/: DM2470A-celltiter.txt  DM2470A-incucyte-confluence.txt  DM2470B-celltiter.txt  DM2470B-incucyte-confluence.txt  DM2470C-celltiter.txt  DM2470D-celltiter.txt
drug-dosing/notebooks/: response.py
scrna/: .gitignore
scrna/barcodes/: .gitignore  .task.cfg.mk  README.md  pycashier.toml
scrna/barcodes/scripts/: assign.py  collapse.py  filter.py  post_cluster.py
scrna/downstream/notebooks/: clone_cluster_deg_followup.py  divergent_recovery.py  divergent_recovery_diffexp_followup.py  figures.py  finalize_anndata.py  metrics.py  misc_figures.py  new_populations_diffexp_followup.py  pt_30hr_diffexp_followup.py  pt_surv_diffexp_followup.py  shuffle_barcode_survivorship.py  umaps.py  umaps_extra.py
scrna/downstream/scripts/: clone_cluster_diffexp_mixed_effects.py  divergent_recovery_diffexp.py  divergent_recovery_gsea.py  new_populations_diffexp_mixed_effects.py  pt_30hr_gsea.py  umap_gene.py  (+2 more)
scrna/fastq2h5ad/: .gitignore  README.md  config.yml
swydd/: __init__.py
targeted/: Makefile  README.md  pycashier.toml
targeted/data/: DM2103-bfp.tsv
targeted/notebooks/: checks.py  figures.py  growth.py  metrics.py  outgrowth.py  subpopulations.py  supplement.py
targeted/scripts/: barcode-to-bgID.py  fetch-raw.py  preprocess_outgrowth.py  preprocess_treated.py
workflow/: Snakefile  drug-dosing.smk  fastq2h5ad.smk  figures.json  scrna-barcodes.smk  scrna-deg.smk  scrna-downstream.smk  targeted.smk
(+2 files in other folders)
